Service/Chapter2/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myingress.service.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srv-nginx
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: srv-multitool
                port:
                  number: 80
